crates/carta/tests/snapshots/golden_writer__beamer__table__table-aligned.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}lrcl@{}}
\toprule\noalign{}
l & r & c & d \\
\midrule\noalign{}
\endhead
1 & 2 & 3 & 4 \\
\bottomrule\noalign{}
\end{longtable}
}
\end{frame}
