crates/carta/tests/snapshots/golden_writer__beamer__table__table-body-head.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
h1 & h2 \\
\midrule\noalign{}
\endhead
group & values \\
k1 & v1 \\
k2 & v2 \\
\bottomrule\noalign{}
\end{longtable}
}
\end{frame}
