crates/carta/tests/snapshots/golden_writer__beamer__table__table-caption-blocks.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\begin{longtable}[]{@{}l@{}}
\caption{First caption paragraph\\
Second caption paragraph}\tabularnewline
\toprule\noalign{}
h \\
\midrule\noalign{}
\endfirsthead
\toprule\noalign{}
h \\
\midrule\noalign{}
\endhead
v \\
\bottomrule\noalign{}
\end{longtable}
\end{frame}
