crates/carta/tests/snapshots/golden_writer__beamer__table__table-caption-div.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\begin{longtable}[]{@{}ll@{}}
\caption{}\tabularnewline
\toprule\noalign{}
\endfirsthead
\toprule\noalign{}
\endhead
a & b \\
\bottomrule\noalign{}
\end{longtable}
\end{frame}
