crates/carta/tests/snapshots/golden_writer__beamer__table__table-caption.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\begin{longtable}[]{@{}l@{}}
\caption{A caption for the table}\tabularnewline
\toprule\noalign{}
h \\
\midrule\noalign{}
\endfirsthead
\toprule\noalign{}
h \\
\midrule\noalign{}
\endhead
v \\
\bottomrule\noalign{}
\end{longtable}
\end{frame}
