crates/carta/tests/snapshots/golden_writer__beamer__table__table-cell-blank.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
left & right \\
\midrule\noalign{}
\endhead
x & \\
& y \\
\bottomrule\noalign{}
\end{longtable}
}
\end{frame}
