crates/carta/tests/snapshots/golden_writer__beamer__table__table-cell-boundary-space.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}lll@{}}
\toprule\noalign{}
col1 & col2 & col3 \\
\midrule\noalign{}
\endhead
a & spaced text & trailing  \\
\bottomrule\noalign{}
\end{longtable}
}
\end{frame}
