crates/carta/tests/snapshots/golden_writer__beamer__table__table-cluster-widths.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}lllll@{}}
\toprule\noalign{}
signs & selector & joined & narrow & mark \\
\midrule\noalign{}
\endhead
⌚⭐✅ & ☀️1️⃣ & 👨‍👩‍👧👍🏽 & ㉈゙ & ́abc \\
\bottomrule\noalign{}
\end{longtable}
}
\end{frame}
